--- a/api/bakery/models/bakery.settings.json
+++ b/api/bakery/models/bakery.settings.json
@@ -44,6 +44,18 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "close_up": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
